<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/walmart"
                    android:layout_width="149dp"
                    android:layout_height="18dp"
                    android:gravity="top"
                    android:lineSpacingExtra="3sp"
                    android:text="@string/walmart"
                    android:textAppearance="@style/walmart"
                    android:translationY="-1.44sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <!-- Auto layout, grids, variables, and unit scale are not yet supported -->
                    <TextView
                        android:id="@+id/today"
                        android:layout_width="68dp"
                        android:layout_height="15dp"
                        android:gravity="top"
                        android:lineSpacingExtra="2sp"
                        android:text="@string/today"
                        android:textAppearance="@style/today"
                        android:translationY="-1.2sp" />

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="68dp"
                        android:layout_height="15dp"
                        android:gravity="top"
                        android:lineSpacingExtra="2sp"
                        android:text="12:02"
                        android:textAppearance="@style/today"
                        android:translationY="-1.2sp" />


                </LinearLayout>
            </LinearLayout>
            <!-- Auto layout, grids, variables, and unit scale are not yet supported -->
            <TextView
                android:id="@+id/some_id"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginStart="30dp"
                android:gravity="right|top"
                android:padding="4dp"
                android:lineSpacingExtra="3sp"
                android:text="@string/some_ids"
                android:textAppearance="@style/some_ids"
                android:translationY="-1.44sp" />

            <ImageView
                android:id="@+id/img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:gravity="center"
                android:lineSpacingExtra="3sp"
                android:src="@drawable/arrow_right_s_line"

                android:textAppearance="@style/some_id"
                android:translationY="-1.44sp" />

        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>