<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtpActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="314dp"
        android:layout_height="25dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/details_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_details" />

    <TextView
        android:id="@+id/cr_er_un_co"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:lineSpacingExtra="5sp"
        android:text="@string/otp"
        android:textAlignment="center"
        android:textAppearance="@style/entrez_votr"
        android:textSize="16sp"
        android:textStyle="bold"
        android:translationY="-2.52sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />




    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:id="@+id/gridLayout"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:gravity="center"
        app:columnCount="1"
        app:rowCount="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cr_er_un_co">



            <TextView
                android:id="@+id/message_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:gravity="center"
                android:lineSpacingExtra="5sp"
                android:text="@string/code6"
                android:textAlignment="center"
                android:textAppearance="@style/entrez_votr"
                android:textSize="16sp"
                android:textStyle="bold"
                android:translationY="-2.52sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />




        <com.otpview.OTPTextView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            app:otp_text_size="20sp"
            app:otp_box_background="@drawable/bg_otp_box"
            app:otp_box_background_active="@drawable/bg_otp_box_active"
            app:otp_box_background_inactive="@drawable/bg_otp_box_inactive"
            app:otp_box_background_error="@drawable/bg_otp_box_error"
            app:otp_box_background_success="@drawable/bg_otp_box_success"
            app:hide_otp_drawable="@drawable/bg_otp_box_hide"
            app:height="45dp"
            app:width="40dp"
            app:box_margin="6dp"
            app:hide_otp="false"
            app:length="6"
            app:otp=""/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:flow_horizontalGap="22dp"
        app:flow_verticalGap="23dp"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/renv_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/renvoyer_le_code"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="111dp"
            tools:layout_editor_absoluteY="477dp" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="01 : 59"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="111dp"
            tools:layout_editor_absoluteY="477dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>