<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/rounded_bottom_sheet">

    <!-- En-tête -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/rectangle_3"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginEnd="12dp"
            android:background="@drawable/rectangle_3"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/title_carte"
                android:backgroundTint="@color/blue"
                android:src="@drawable/exchange_funds_line"/>
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Transfert Mobile Money"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="16dp" />

    </LinearLayout>

    <!-- Numéro de téléphone -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/num_expeditaire"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Libellé -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Numéro Destinaire"
        android:layout_marginTop="12dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="phone"
            android:layout_height="wrap_content"
            android:hint=""/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Montant et Devise -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Montant"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="$ 0.00" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/currency_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:entries="@array/currencies" />

    </LinearLayout>

    <!-- Bouton Valider -->
    <com.google.android.material.button.MaterialButton

        android:id="@+id/validate_buttons"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/valider_le_transfert"
        android:textSize="16sp"
        android:backgroundTint="@color/Secondary_1"
        android:textStyle="bold"
        android:textAppearance="@color/black"
        android:textColor="@color/black"
        android:layout_marginTop="24dp" />

</LinearLayout>